<resources>
    <string name="app_name">QuickNovel</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Explore</string>
    <string name="title_sources">Sources</string>
    <string name="title_download">Library</string>
    <string name="home_drawer_home">Home</string>
    <string name="home_drawer_library">Library</string>
    <string name="home_drawer_browse">Browse</string>
    <string name="home_drawer_novel_finder">Novel Finder</string>
    <string name="home_drawer_header_title">QuickNovel</string>
    <string name="home_drawer_header_subtitle">Find your next favorite novel.</string>
    <string name="home_open_drawer">Open navigation drawer</string>
    <string name="home_open_search">Search novels</string>
    <string name="home_open_account">Open settings</string>
    <string name="home_tag_search_title">Find by tag</string>
    <string name="home_tag_search_hint">Enter a tag, such as fantasy</string>
    <string name="home_tag_search_submit">Search this tag</string>
    <string name="home_continue_reading">Continue reading</string>
    <string name="home_last_chapter_format">Last read: %1$s</string>
    <string name="home_chapter_number_format">Chapter %1$d</string>
    <string name="home_ready_to_continue">Ready to continue</string>
    <string name="home_continue_button">Continue</string>
    <string name="home_popular">Popular</string>
    <string name="home_popular_sign_in">Sign in to see the top community picks</string>
    <string name="home_popular_empty">No community posts yet.</string>
    <string name="home_popular_error">Couldn’t load the top community posts.</string>
    <string name="home_random">Random novels</string>
    <string name="home_random_shuffle">Shuffle</string>
    <string name="home_random_empty">No random novels found from your enabled sources.</string>
    <string name="home_random_error_format">Couldn’t load novels from %1$s.</string>
    <string name="home_community_author_format">by %1$s</string>
    <string name="home_from_provider_format">From %1$s</string>
    <string name="home_posted_just_now">Posted just now</string>
    <plurals name="home_posted_minutes_ago">
        <item quantity="one">Posted %1$d minute ago</item>
        <item quantity="other">Posted %1$d minutes ago</item>
    </plurals>
    <plurals name="home_posted_hours_ago">
        <item quantity="one">Posted %1$d hour ago</item>
        <item quantity="other">Posted %1$d hours ago</item>
    </plurals>
    <plurals name="home_posted_days_ago">
        <item quantity="one">Posted %1$d day ago</item>
        <item quantity="other">Posted %1$d days ago</item>
    </plurals>
    <string name="home_see_more">See more</string>
    <string name="home_retry">Retry</string>
    <string name="locale_key" translatable="false">locale_key</string>
    <string name="provider_lang_key" translatable="false">provider_lang_key</string>
    <string name="restore_key" translatable="false">restore_key</string>
    <string name="restore_settings">Restore data from backup</string>
    <string name="active_providers">%d providers enabled</string>
    <string name="search_hint">Search Novels…</string>
    <string name="synopsis">Synopsis</string>
    <string name="no_data">No Data</string>
    <string name="none">@string/type_none</string>
    <string name="action_bar_up_description">Navigate up</string>
    <string name="no_author">Author not found</string>
    <string name="no_chapters">No Chapters</string>
    <string name="error_outside_chapter">Invalid skip</string>
    <string name="generate_epub">Generate Epub</string>
    <string name="generating_epub">Generating Epub</string>
    <string name="reload_error">Retry connection…</string>
    <string name="download_text">Download</string>
    <string name="download">Download</string>
    <string name="download_from_chapter">Partial download</string>
    <string name="download_ml">Download translation model</string>
    <string name="download_ml_long">To translate locally the app needs to download the translation model (~30MB)</string>
    <string name="novel_imagecover_descript">Novel Imagecover</string>
    <string name="background_image_descript">Background Image</string>
    <string name="back_to_search">Back to search</string>
    <string name="downloads_text">Downloads</string>
    <string name="open_text">Read</string>
    <string name="update_text">Update</string>
    <string name="provider_list_key">provider_list</string>
    <string name="search_providers_list_key">search_providers_list</string>
    <string name="auto_update_key">auto_update</string>
    <string name="external_reader_key">external_reader</string>
    <string name="remove_external_key">remove_external</string>
    <string name="manual_check_update_key">manual_check_update</string>
    <string name="backup_key">backup_key</string>
    <string name="rating_format_key">rating_format</string>
    <string name="grid_format_key">grid_format</string>
    <string name="download_format_key">download_format</string>
    <string name="exampleTXT">"this is <annotation key="rounded">a regular</annotation> paragraph."</string>
    <string name="tags">Tags</string>
    <string name="views">Views</string>
    <string name="delete">Delete</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="select_location">Select location</string>
    <string name="poster_descript">Poster</string>
    <string name="sort_downloads_descript">Sort Downloads</string>
    <string name="search_providers">Search Providers</string>
    <string name="search">Search</string>
    <string name="general">General</string>
    <string name="overall">Overall</string>
    <string name="info">Info</string>
    <string name="app_settings">App settings</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="advanced_search_desc">Gives you the search results separated by provider</string>
    <string name="show_app_updates">Show app updates</string>
    <string name="show_app_updates_desc">Automatically search for new updates on start</string>
    <string name="external_reader">External reader</string>
    <string name="external_reader_desc">Use an external app to read</string>
    <string name="remove_bloat">Remove Bloat</string>
    <string name="remove_bloat_desc">Removes the title and translator from all pages, will cause longer generation time</string>
    <string name="check_for_update">Check for Update</string>
    <string name="translating">Translating</string>
    <string name="filter_dialog_sort_by">Sort by</string>
    <string name="filter_dialog_filter">Apply</string>
    <string name="filter_dialog_general">General</string>
    <string name="filter_dialog_order_by">Order by</string>
    <string name="filter_dialog_genre">Genre</string>
    <string name="browse_list_icon">Icon</string>
    <string name="home_title_text">Explore</string>
    <string name="mainpage_filter">Filter</string>
    <string name="mainpage_clear_tag">Clear tag</string>
    <string name="mainpage_tag_no_results">No novels found for this tag.</string>
    <string name="tag_browse_unsupported">This tag can’t be browsed with this provider.</string>
    <string name="shadow_descript">Shadow</string>
    <string name="user_image_avatar">Avatar</string>
    <string name="change_providers_descript">Change Provider</string>
    <string name="poster_open_source_descript">Open Source</string>
    <string name="mainpage_sort_by_button_text">Sort</string>
    <string name="read_action_settings">Settings</string>
    <string name="read_action_chapters">Chapters</string>
    <string name="read_action_chapters_formatted" formatted="true">%d Chapters</string>
    <string name="read_action_tts">Text To Speech</string>
    <string name="read_action_screen_rotation">Screen Rotation</string>
    <string name="grid_view">Grid</string>
    <string name="list_view">List</string>
    <string name="download_list_view_key" translatable="false">download_list_view_key</string>
    <string name="history_list_view_key" translatable="false">history_list_view_key</string>
    <string name="search_list_view_key" translatable="false">search_list_view_key</string>
    <string name="download_open_action">Open</string>
    <string name="download_read_action">Read</string>
    <string name="download_update_action">Update</string>
    <string name="download_delete_action">Delete</string>
    <string name="default_text">Default</string>
    <string name="rotation_type">Rotation type</string>
    <string name="rotation_free">Free</string>
    <string name="rotation_portrait">Portrait</string>
    <string name="rotation_landscape">Landscape</string>
    <string name="rotation_force_portrait">Locked portrait</string>
    <string name="rotation_force_landscape">Locked landscape</string>
    <string name="inf_scroll">Infinite scroll</string>
    <string name="button_scroll">Chapter buttons</string>
    <string name="overscroll_scroll">Overscroll</string>
    <string name="read_epub">Read epub</string>
    <string name="type_reading">Reading</string>
    <string name="type_on_hold">On-Hold</string>
    <string name="type_completed">Completed</string>
    <string name="type_dropped">Dropped</string>
    <string name="type_plan_to_read">Plan to Read</string>
    <string name="type_none">None</string>
    <string name="has_read">Has read</string>
    <string name="read_display_settings">Settings</string>
    <string name="tab_translation">Translate</string>
    <string name="read_text_size">Text</string>
    <string name="bigger_font">Bigger Font</string>
    <string name="smaller_font">Smaller Font</string>
    <string name="scroll_with_volume_keys">Scroll with volume keys</string>
    <string name="general_settings">General</string>
    <string name="lock_tts">Lock TTS scroll area</string>
    <string name="reading_color">Reading Color</string>
    <string name="reader_settings">Reader Settings</string>
    <string name="read_color">Reader Theme</string>
    <string name="show_battery">Show Battery</string>
    <string name="show_time">Show Time</string>
    <string name="result_share">Share</string>
    <string name="reader_font">Reader Font</string>
    <string name="font">Font</string>
    <string name="background_color">Background Color</string>
    <string name="text_color">Text Color</string>
    <string name="long_download_time">Warning, This source has extremely long download time, streaming is recommended</string>
    <string name="quickstream_novel_text">Stream read novel</string>
    <string name="history_more_options">More Options</string>
    <string name="stream_read">Stream Read</string>
    <string name="clear_history">Clear History</string>
    <string name="nothing_read_recently">Nothing read recently</string>
    <string name="monke_eating">Monke Eating</string>
    <string name="tab_downloads">Downloads</string>
    <string name="reviews_to_top">To top</string>
    <string name="text_size">Text Size</string>
    <string name="text_padding">Text Side Margin</string>
    <string name="reset_value">Reset to default</string>
    <string name="text_font">Text Font</string>
    <string name="scroll_type">Scroll Type</string>
    <string name="no_chapters_found">No chapters found</string>
    <string name="error_loading_novel">Error loading novel</string>
    <string name="error_loading_chapter">Error loading chapter</string>
    <string name="provider_missing">The provider of this novel is no longer available</string>
    <string name="text_padding_top">Text Top Margin</string>
    <string name="home_more_info">More info</string>
    <string name="home_expanded_hide">Hide</string>
    <string name="title_discover">Discover</string>
</resources>